--- a/api/package.json
+++ b/api/package.json
@@ -5,5 +5,8 @@
   "dependencies": {
     "@redwoodjs/api": "3.3.0",
     "@redwoodjs/graphql-server": "3.3.0"
+  },
+  "devDependencies": {
+    "serverless": "^3.24.1"
   }
 }
