--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "3.3.0"
+    "@redwoodjs/core": "3.3.0",
+    "@vercel/nft": "^0.22.1",
+    "archiver": "^5.3.1",
+    "fs-extra": "^10.1.0",
+    "serverless": "^3.24.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
