--- a/web/package.json
+++ b/web/package.json
@@ -19,5 +19,9 @@
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "serverless": "^3.24.1",
+    "serverless-lift": "^1.20.2"
   }
 }
