--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "@redwoodjs/graphql-server": "3.3.0"
   },
   "devDependencies": {
-    "serverless": "^3.24.1"
+    "serverless": "^3.24.1",
+    "serverless-azure-functions": "^2.1.3"
   }
 }
