--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,20 @@
   "name": "api",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "node build.js",
+    "check": "tsc --pretty --noEmit"
+  },
   "dependencies": {
     "@redwoodjs/api": "3.3.0",
     "@redwoodjs/graphql-server": "3.3.0"
   },
   "devDependencies": {
+    "@azure/functions": "3.2.0",
+    "esbuild": "0.15.10",
     "serverless": "^3.24.1",
-    "serverless-azure-functions": "^2.1.3"
+    "serverless-azure-functions": "^2.1.3",
+    "tslib": "2.4.0",
+    "typescript": "4.8.4"
   }
 }
