--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
+  "scripts": {
+    "deploy:functions": "az functionapp deployment source config-zip -g sls-weur-dev-simpletest-rg -n sls-weur-dev-simpletest --src api/working/Archive.zip"
+  },
   "packageManager": "yarn@3.2.4"
 }
