--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "seed": "yarn rw exec seed"
   },
   "scripts": {
-    "deploy:functions": "az functionapp deployment source config-zip -g sls-weur-dev-simpletest-rg -n sls-weur-dev-simpletest --src api/working/Archive.zip"
+    "deploy:functions": "az functionapp deployment source config-zip -g sls-weur-dev-simpletest-rg -n sls-weur-dev-simpletest --src api/deployment/Archive.zip"
   },
   "packageManager": "yarn@3.2.4"
 }
